Refactor deployment service to use ephemeralEnvironmentId and improve query criteria handling